INCLUDES = -I../
noinst_LIBRARIES = libix86-32.a

libix86_32_a_SOURCES = \
iR5900Arit.c     iR5900Branch.c  iR5900LoadStore.c  iR5900MultDiv.c \
iR5900Arit.h     iR5900Branch.h  iR5900LoadStore.h  iR5900MultDiv.h \
iR5900AritImm.c  iR5900Jump.c    iR5900Move.c       iR5900Shift.c \
iR5900AritImm.h  iR5900Jump.h    iR5900Move.h       iR5900Shift.h
